--- a/index.html
+++ b/index.html
@@ -142,7 +142,15 @@ main{position:relative;z-index:3;padding:60px 0 80px;}
 .modal .meta-grid{display:grid;grid-template-columns:150px 1fr;gap:4px 10px;font-size:14px;opacity:.95;margin-bottom:10px;line-height:1.4;}
 .modal .meta-grid div:first-child{font-weight:600;color:#d8e2ff;}
 .modal .img-grid .grid-img{width:100%;aspect-ratio:3/2;object-fit:cover;border-radius:8px;cursor:pointer;}
-.modal .povidani{font-size:14px;opacity:.95;margin-top:6px;line-height:1.5;text-align:justify;}
+.modal .povidani {
+  font-size: 14px;
+  opacity: .95;
+  margin-top: 6px;
+  line-height: 1.6;
+  text-align: justify;
+  white-space: pre-line;      /* respektuje nové řádky (\n) */
+  text-indent: 1.5em;         /* odsazení prvního řádku odstavce */
+}
 
 /* Fullscreen */
 .modal.fullscreen{background:#000;max-width:none;max-height:none;width:100%;height:100%;padding:0;display:flex;align-items:center;justify-content:center;}
