--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ const imgNepal  = i => i===0 ? `${RAW}/Nepal/Nepal000.jpg` : `${RAW}/Nepal/Nepal
 
 /* ---------- Data: Koruna Evropy ---------- */
 const korunaData = [
-{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Alpy",imgs:[11,12,13,14,15,16,17,18,19],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Alpy",imgs:[11,12,13,14,15,16,17,18,19],povidani:"Výstup jsme zahájili za svítání z chaty Gouter.\n\nDruhý den nás čekala závěrečná pasáž po ledovci, která vyžadovala jistotu v pohybu i koordinaci týmu."},
 {p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Alpy",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"11:18",team:"Karel, Bára, Luky",obt:"B",pohori:"Alpy",imgs:[31,32,33,34,35,36,37,38,39],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"14:13",team:"Karel, Míša, Pedro",obt:"A",pohori:"Sierra Nevada, nejvyšší hora Tenerife je Pico de Teide (3718 m n. m.)",imgs:[41],povidani:"Popis výstupu bude ještě doplněn"},
