--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ main{position:relative;z-index:3;padding:60px 0 80px;}
 .modal .povidani {
   font-size: 14px;
   opacity: .95;
-  margin-top: 6px;
+  margin-top: 18px;           /* 🔹 větší mezera nad textem */
   line-height: 1.6;
   text-align: justify;
   white-space: pre-line;      /* respektuje nové řádky (\n) */
