--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@ html,body{
 .btn.active{background:#fff;color:var(--dark-blue);}
 
 /* Galerie */
-main{position:relative;z-index:3;padding:0px 0 80px;}
+main{
+  position: relative;
+  z-index: 3;
+  margin-top: -50px;   /* posune galerii výš */
+  padding: 20px 0 80px; /* menší horní mezera */
+}
+
 .container{width:95%;max-width:var(--max-width);margin:0 auto;}
 .gallery { display: grid; gap: 16px; }
 
