--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@ main{
   object-fit:cover;
   transition:transform .35s ease;
 }
+/* Tablet – zmírnění ořezu (na šířku i na výšku) */
+@media (min-width: 600px) and (max-width: 1000px) {
+  .photo-card img.photo {
+    aspect-ratio: 4/3;     /* vyšší obrázek → menší ořez */
+    object-position: center;
+  }
+}
+
+/* Tablet modální okno – také zmírnit ořez */
+@media (min-width: 600px) and (max-width: 1000px) {
+  .modal .img-grid .grid-img {
+    aspect-ratio: 4/3;
+    object-position: center;
+  }
+}
+  
 .photo-card:hover img.photo{
   transform:scale(1.04);
 }
