--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Vzít batoh na záda a jít ...</title>
 
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/suchanek76/website/main/images/favicon.ico">
+
+<!-- PNG ikony -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/suchanek76/website/main/images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://raw.githubusercontent.com/suchanek76/website/main/images/favicon-192.png">
+
+<!-- Apple touch icon (iPhone/iPad) -->
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/suchanek76/website/main/images/apple-touch-icon.png">
+
+
 <style>
 :root {
   --dark-blue: #041633;
