--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ html,body{
 main{
   position: relative;
   z-index: 3;
-  margin-top: -150px;
+  margin-top: -60px;
   padding: 20px 0 80px;
 }
 
@@ -333,6 +333,13 @@ main{
   <div class="modal"><div id="modal-content"></div></div>
 </div>
 
+footer {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 14px;
+  opacity: 0.8;
+}
+  
 <footer>© Vzít batoh na záda a jít ...</footer>
 
 
