--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Vzít batoh na záda a jít ...</title>
 
-<!-- ▼▼▼ FAVICONY – plně funkční ▼▼▼ -->
+<!-- ▼▼▼ FAVICONY ▼▼▼ -->
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/suchanek76/website/main/images/favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/suchanek76/website/main/images/favicon-32.png">
 <link rel="icon" type="image/png" sizes="192x192" href="https://raw.githubusercontent.com/suchanek76/website/main/images/favicon-192.png">
@@ -11,12 +11,16 @@
 <!-- ▲▲▲ FAVICONY ▲▲▲ -->
 
 <style>
-:root {
-  --dark-blue: #041633;
-  --accent: #ffffff;
-  --max-width: 1200px;
+:root{
+  --dark-blue:#041633;
+  --accent:#ffffff;
+  --max-width:1200px;
 }
-*{box-sizing:border-box;margin:0;padding:0;}
+*{
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
+}
 html,body{
   font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
   color:var(--accent);
@@ -25,39 +29,16 @@ html,body{
   scroll-behavior:auto!important;
 }
 
-/* Hero */
-/* Default – PC */
-.hero-bg img{
+/* -------------------------------------------------
+   HERO
+   ------------------------------------------------- */
+.hero{
+  position:relative;
   width:100%;
-  height:100%;
-  object-fit:cover;
-  object-position:center;
+  height:100vh;
+  background:var(--dark-blue);
+  overflow:hidden;
 }
-
-/* iPad – minimální ořez */
-@media (min-width:768px) and (max-width:1024px) {
-  .hero-bg img{
-    object-fit:contain;
-    background-color:#041633; /* vyplní pruhy nad/pod obrazem */
-  }
-}
-
-/* Mobil na výšku – menší ořez, obrázek vyšší */
-@media (max-width:600px) and (orientation:portrait) {
-  .hero-bg img{
-    object-fit:cover;
-    object-position:center top; /* víc nahoře → méně řeže */
-  }
-}
-
-/* Mobil na šířku – střední kompromis */
-@media (max-width:800px) and (orientation:landscape) {
-  .hero-bg img{
-    object-fit:cover;
-    object-position:center 30%;
-  }
-}
-
 .hero-bg{
   position:absolute;
   inset:0;
@@ -71,6 +52,31 @@ html,body{
   object-fit:cover;
   object-position:center;
 }
+
+/* iPad – minimální ořez */
+@media (min-width:768px) and (max-width:1024px){
+  .hero-bg img{
+    object-fit:contain;
+    background-color:#041633; /* pruhy kolem fotky */
+  }
+}
+
+/* Mobil na výšku – menší ořez, důraz na horní část */
+@media (max-width:600px) and (orientation:portrait){
+  .hero-bg img{
+    object-fit:cover;
+    object-position:center top;
+  }
+}
+
+/* Mobil na šířku – kompromis */
+@media (max-width:800px) and (orientation:landscape){
+  .hero-bg img{
+    object-fit:cover;
+    object-position:center 30%;
+  }
+}
+
 .hero-overlay{
   position:absolute;
   inset:0;
@@ -79,108 +85,129 @@ html,body{
   align-items:flex-start;
   padding-top:12vh;
 }
-.nav{display:flex;gap:14px;flex-wrap:wrap;justify-content:center;}
+.nav{
+  display:flex;
+  gap:14px;
+  flex-wrap:wrap;
+  justify-content:center;
+}
 .btn{
   background:rgba(255,255,255,0.12);
   border:1px solid rgba(255,255,255,0.25);
   padding:14px 22px;
-  color:white;
+  color:#fff;
   border-radius:8px;
   font-weight:600;
   cursor:pointer;
   transition:background .25s,transform .2s;
 }
-.btn:hover{background:rgba(255,255,255,0.3);transform:scale(1.04);}
-.btn.active{background:#fff;color:var(--dark-blue);}
+.btn:hover{
+  background:rgba(255,255,255,0.3);
+  transform:scale(1.04);
+}
+.btn.active{
+  background:#fff;
+  color:var(--dark-blue);
+}
 
-/* Galerie */
-main {
-  position: relative;
-  z-index: 3;
-  margin-top: 80px;     /* PC – jemné zvednutí, galerie nebude nalepená */
-  padding: 20px 0 80px;
+/* menší úpravy hero na menších zařízeních */
+@media(max-width:900px){
+  .hero-overlay{padding-top:8vh;}
+  .btn{padding:12px 18px;font-size:15px;}
+}
+@media(max-width:600px){
+  .hero-overlay{padding-top:6vh;}
+  .nav{flex-direction:column;gap:10px;}
+  .btn{width:180px;text-align:center;}
+}
+
+/* -------------------------------------------------
+   GALERIE / LAYOUT
+   ------------------------------------------------- */
+main{
+  position:relative;
+  z-index:3;
+  margin-top:-80px;   /* PC – galerie trochu výš, ale ne nalepená */
+  padding:20px 0 80px;
 }
 
 /* Tablety na šířku */
-@media (max-width: 1100px) {
-  main {
-    margin-top: 40px;
-  }
+@media (max-width:1100px){
+  main{margin-top:-60px;}
 }
 
 /* Tablety na výšku */
-@media (max-width: 900px) {
-  main {
-    margin-top: 20px;
+@media (max-width:900px){
+  main{margin-top:-40px;}
+}
+
+/* Mobily */
+@media (max-width:600px){
+  main{margin-top:-20px;}
+}
+
+.container{
+  width:95%;
+  max-width:var(--max-width);
+  margin:0 auto;
+}
+.gallery{
+  display:grid;
+  gap:16px;
+}
+
+/* Koruna + Alpy – výchozí 3 v řadě */
+.grid-3{
+  grid-template-columns:repeat(3,1fr);
+}
+
+/* Nepál – výchozí 4 v řadě (PC + tablet) */
+#nepal-gallery.grid-4{
+  grid-template-columns:repeat(4,1fr);
+}
+
+/* Mobil na šířku – 2 v řadě */
+@media (max-width:800px) and (orientation:landscape){
+  .grid-3{
+    grid-template-columns:repeat(2,1fr);
+  }
+  #nepal-gallery.grid-4{
+    grid-template-columns:repeat(2,1fr);
   }
 }
 
-/* Mobily na výšku i šířku */
-@media (max-width: 600px) {
-  main {
-    margin-top: 80px;
+/* Mobil na výšku – 1 v řadě */
+@media (max-width:600px) and (orientation:portrait){
+  .grid-3{
+    grid-template-columns:1fr;
+  }
+  #nepal-gallery.grid-4{
+    grid-template-columns:1fr;
   }
 }
 
-
-.container{width:95%;max-width:var(--max-width);margin:0 auto;}
-.gallery { display: grid; gap: 16px; }
-
-/* Koruna + Alpy galerie */
-.grid-3 { grid-template-columns: repeat(3, 1fr); }
-
-/* Nepál */
-/* PC + tablet = 4 v řadě */
-#nepal-gallery.grid-4 {
-  grid-template-columns: repeat(4, 1fr);
+/* -------------------------------------------------
+   MODAL – GRID OBRÁZKŮ
+   ------------------------------------------------- */
+.modal .img-grid{
+  display:grid;
+  gap:10px;
+  grid-template-columns:repeat(3,1fr);
 }
-
-/* Mobil na šířku = 2 v řadě */
-@media (max-width: 800px) and (orientation: landscape) {
-  #nepal-gallery.grid-4 {
-    grid-template-columns: repeat(2, 1fr);
+@media (max-width:800px) and (orientation:landscape){
+  .modal .img-grid{
+    grid-template-columns:repeat(2,1fr);
+  }
+}
+@media (max-width:600px) and (orientation:portrait){
+  .modal .img-grid{
+    grid-template-columns:1fr;
   }
 }
 
-/* Mobil na výšku = 1 v řadě */
-@media (max-width: 600px) and (orientation: portrait) {
-  #nepal-gallery.grid-4 {
-    grid-template-columns: 1fr;
-  }
-}
-
-/* Tablet */
-@media (max-width: 1000px) {
-  .grid-3 { grid-template-columns: repeat(3, 1fr); }
-}
-
-/* Mobil na šířku */
-@media (max-width: 800px) and (orientation: landscape) {
-  .grid-3 { grid-template-columns: repeat(2, 1fr); }
-}
-
-/* Mobil na výšku */
-@media (max-width: 600px) and (orientation: portrait) {
-  .grid-3 { grid-template-columns: 1fr; }
-}
-
-/* Modalový grid */
-.modal .img-grid {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
-}
-@media (max-width: 1000px) {
-  .modal .img-grid { grid-template-columns: repeat(3, 1fr); }
-}
-@media (max-width: 800px) and (orientation: landscape) {
-  .modal .img-grid { grid-template-columns: repeat(2, 1fr); }
-}
-@media (max-width: 600px) and (orientation: portrait) {
-  .modal .img-grid { grid-template-columns: 1fr; }
-}
-
-/* Karty */
+/* -------------------------------------------------
+   KARTY FOTEK
+   ------------------------------------------------- */
 .photo-card{
   position:relative;
   overflow:hidden;
@@ -192,54 +219,91 @@ main {
   width:100%;
   aspect-ratio:3/2;
   object-fit:cover;
+  object-position:center;
   transition:transform .35s ease;
 }
-/* Tablet – zmírnění ořezu (na šířku i na výšku) */
-@media (min-width: 600px) and (max-width: 1000px) {
-  .photo-card img.photo {
-    aspect-ratio: 4/3;     /* vyšší obrázek → menší ořez */
-    object-position: center;
+
+/* Tablet – menší ořez (karty i miniatury v modalu) */
+@media (min-width:600px) and (max-width:1000px){
+  .photo-card img.photo,
+  .modal .img-grid .grid-img{
+    aspect-ratio:4/3;
+    object-position:center;
   }
 }
 
-/* Tablet modální okno – také zmírnit ořez */
-@media (min-width: 600px) and (max-width: 1000px) {
-  .modal .img-grid .grid-img {
-    aspect-ratio: 4/3;
-    object-position: center;
-  }
-}
-  
 .photo-card:hover img.photo{
   transform:scale(1.04);
 }
 .photo-overlay{
-  position:absolute;left:0;right:0;bottom:0;padding:10px;
+  position:absolute;
+  left:0;
+  right:0;
+  bottom:0;
+  padding:10px;
   background:linear-gradient(to top,rgba(0,0,0,0.7),rgba(0,0,0,0));
 }
-.photo-title{font-weight:700;font-size:14px;}
-.photo-sub{font-size:12px;opacity:0.9;margin-top:3px;}
-
-/* Modal */
-.modal-backdrop{
-  position:fixed;inset:0;background:rgba(0,0,0,0.7);
-  display:flex;align-items:center;justify-content:center;
-  z-index:9999;padding:24px;
-  opacity:0;pointer-events:none;transition:opacity .18s;
+.photo-title{
+  font-weight:700;
+  font-size:14px;
 }
-.modal-backdrop.show{opacity:1;pointer-events:auto;}
+.photo-sub{
+  font-size:12px;
+  opacity:0.9;
+  margin-top:3px;
+}
 
+/* -------------------------------------------------
+   MODAL OKNO
+   ------------------------------------------------- */
+.modal-backdrop{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.7);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+  padding:24px;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity .18s;
+}
+.modal-backdrop.show{
+  opacity:1;
+  pointer-events:auto;
+}
 .modal{
-  width:100%;max-width:980px;max-height:92vh;background:#071431;
-  border-radius:10px;padding:22px 24px;color:#fff;overflow:auto;position:relative;
+  width:100%;
+  max-width:980px;
+  max-height:92vh;
+  background:#071431;
+  border-radius:10px;
+  padding:22px 24px;
+  color:#fff;
+  overflow:auto;
+  position:relative;
 }
 .modal-close{
-  position:absolute;right:16px;top:16px;background:none;border:none;
-  color:white;font-size:22px;cursor:pointer;
+  position:absolute;
+  right:16px;
+  top:16px;
+  background:none;
+  border:none;
+  color:#fff;
+  font-size:22px;
+  cursor:pointer;
 }
-
-.modal h3{font-size:20px;font-weight:700;margin-bottom:8px;}
-.modal hr{margin:10px 0 16px 0;border:none;border-top:1px solid rgba(255,255,255,0.15);}
+.modal h3{
+  font-size:20px;
+  font-weight:700;
+  margin-bottom:8px;
+}
+.modal hr{
+  margin:10px 0 16px;
+  border:none;
+  border-top:1px solid rgba(255,255,255,0.15);
+}
 .modal .meta-grid{
   display:grid;
   grid-template-columns:150px 1fr;
@@ -249,8 +313,10 @@ main {
   margin-bottom:12px;
   line-height:1.4;
 }
-.modal .meta-grid div:first-child{font-weight:600;color:#d8e2ff;}
-
+.modal .meta-grid div:first-child{
+  font-weight:600;
+  color:#d8e2ff;
+}
 .modal .img-grid .grid-img{
   width:100%;
   aspect-ratio:3/2;
@@ -258,119 +324,103 @@ main {
   border-radius:8px;
   cursor:pointer;
 }
-
-.modal .povidani {
-  font-size: 14px;
-  opacity: .95;
-  margin-top: 22px;
-  padding-top: 12px;
-  line-height: 1.6;
-  text-align: justify;
-  white-space: pre-line;
-  border-top: 1px solid rgba(255,255,255,0.15);
+.modal .povidani{
+  font-size:14px;
+  opacity:.95;
+  margin-top:22px;
+  padding-top:12px;
+  line-height:1.6;
+  text-align:justify;
+  white-space:pre-line;
+  border-top:1px solid rgba(255,255,255,0.15);
 }
-.modal .povidani br {
-  display: block;
-  margin-bottom: 6px;
+.modal .povidani br{
+  display:block;
+  margin-bottom:6px;
 }
 
-/* Fullscreen */
+/* Fullscreen modal (slideshow) */
 .modal.fullscreen{
-  background:#000;max-width:none;max-height:none;
-  width:100%;height:100%;padding:0;
-  display:flex;align-items:center;justify-content:center;
+  background:#000;
+  max-width:none;
+  max-height:none;
+  width:100%;
+  height:100%;
+  padding:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 .modal.fullscreen img.main{
-  max-height:90vh;max-width:95vw;
-  object-fit:contain;border-radius:10px;
+  max-height:90vh;
+  max-width:95vw;
+  object-fit:contain;
+  border-radius:10px;
 }
 .modal.fullscreen h3{
-  position:absolute;top:20px;left:30px;
-  color:white;text-shadow:0 2px 5px rgba(0,0,0,0.8);
+  position:absolute;
+  top:20px;
+  left:30px;
+  color:#fff;
+  text-shadow:0 2px 5px rgba(0,0,0,0.8);
 }
 .modal.fullscreen .modal-close{
-  position:absolute;top:18px;right:24px;font-size:30px;
+  position:absolute;
+  top:18px;
+  right:24px;
+  font-size:30px;
 }
 .modal.fullscreen .nav-arrow{
-  background:none;border:none;color:white;font-size:40px;
-  cursor:pointer;position:absolute;top:50%;
-  transform:translateY(-50%);padding:20px;
-  opacity:0.6;transition:opacity .2s;
+  background:none;
+  border:none;
+  color:#fff;
+  font-size:40px;
+  cursor:pointer;
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  padding:20px;
+  opacity:0.6;
+  transition:opacity .2s;
 }
-.modal.fullscreen .nav-arrow:hover{opacity:1;}
+.modal.fullscreen .nav-arrow:hover{
+  opacity:1;
+}
 .modal.fullscreen .nav-arrow.left{left:20px;}
 .modal.fullscreen .nav-arrow.right{right:20px;}
 
-.fade{opacity:0;transition:opacity .4s ease;}
-.fade.show{opacity:1;}
+.fade{
+  opacity:0;
+  transition:opacity .4s ease;
+}
+.fade.show{
+  opacity:1;
+}
 
+/* Úprava meta-grid na menších zařízení */
 @media(max-width:900px){
-  .hero-overlay{padding-top:8vh;}
-  .btn{padding:12px 18px;font-size:15px;}
-  .modal .meta-grid{grid-template-columns:120px 1fr;}
+  .modal .meta-grid{
+    grid-template-columns:120px 1fr;
+  }
 }
 @media(max-width:600px){
-  .hero-overlay{padding-top:6vh;}
-  .nav{flex-direction:column;gap:10px;}
-  .btn{width:180px;text-align:center;}
-  .modal .meta-grid{grid-template-columns:100px 1fr;}
+  .modal .meta-grid{
+    grid-template-columns:100px 1fr;
+  }
+}
+
+/* -------------------------------------------------
+   FOOTER
+   ------------------------------------------------- */
+footer{
+  text-align:center;
+  padding:16px 0 24px;
+  font-size:13px;
+  opacity:.8;
 }
 </style>
 </head>
 
-
-<body>
-
-<header class="hero">
-  <div class="hero-bg">
-    <img src="https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg" alt="">
-  </div>
-
-  <div class="hero-overlay">
-    <div class="nav">
-      <button class="btn active" data-route="koruna">Koruna Evropy</button>
-      <button class="btn" data-route="alpy">Alpské čtyřtisícovky</button>
-      <button class="btn" data-route="nepal">Nepál</button>
-    </div>
-  </div>
-</header>
-
-<main>
-  <div class="container">
-    <section id="koruna" data-route-content>
-      <div id="koruna-gallery" class="gallery grid-3"></div>
-    </section>
-
-    <section id="alpy" data-route-content hidden>
-      <div id="alpy-gallery" class="gallery grid-3"></div>
-    </section>
-
-    <section id="nepal" data-route-content hidden>
-      <div id="nepal-gallery" class="gallery grid-4"></div>
-    </section>
-  </div>
-</main>
-
-<div id="modal-backdrop" class="modal-backdrop" hidden>
-  <div class="modal"><div id="modal-content"></div></div>
-</div>
-  
-<footer>© Vzít batoh na záda a jít ...</footer>
-
-
-<script>
-/* URL kořen */
-const RAW="https://raw.githubusercontent.com/suchanek76/website/main/images";
-
-/* Obrázkové funkce */
-const imgKoruna = i => i===0 ? `${RAW}/Koruna/Koruna000.jpg`
-                             : `${RAW}/Koruna/Koruna${String(i).padStart(3,'0')}.jpg`;
-
-const imgAlpy   = i => i===0 ? `${RAW}/4000/ctyrtisicovka000.jpg`
-                             : `${RAW}/4000/ctyrtisicovka${String(i).padStart(3,'0')}.jpg`;
-
-const imgNepal  = i => i===0 ? `${RAW}/Nepal/Nepal000.jpg`
-                             : `${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 
 
 /* ---------- Data: Koruna Evropy ---------- */
